--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.11.0",
+    "emoji-mart-native": "^0.6.5-beta",
     "expo": "~53.0.17",
     "expo-audio": "~0.4.8",
     "expo-av": "~15.1.7",
@@ -34,6 +35,7 @@
     "react-native": "0.79.5",
     "react-native-animated-charts": "^0.0.5",
     "react-native-audio-visualizer": "^0.0.1",
+    "react-native-emoji-input": "^1.1.10",
     "react-native-emoji-picker": "^0.2.2",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -43,7 +45,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "rn-emoji-keyboard": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
