--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.4.1",
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.11.0",
     "emoji-mart-native": "^0.6.5-beta",
-    "expo": "~53.0.17",
+    "expo": "53.0.20",
     "expo-audio": "~0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
-    "expo-modules-core": "~2.5.0",
-    "expo-permissions": "^14.4.0",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -42,7 +43,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
