--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-audio": "~0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "^7.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
