--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
     "emoji-mart-native": "^0.6.5-beta",
     "expo": "53.0.20",
@@ -25,6 +26,7 @@
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
@@ -48,8 +50,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "rn-emoji-keyboard": "^1.7.0",
-    "expo-file-system": "~18.1.11"
+    "rn-emoji-keyboard": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
