--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
+    "expo-intent-launcher": "~12.1.5",
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
     "expo-notifications": "~0.31.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -43,6 +46,7 @@
     "react-native-emoji-picker": "^0.2.2",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-mime-types": "^2.5.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
