--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "emoji-mart-native": "^0.6.5-beta",
     "expo": "53.0.20",
     "expo-audio": "~0.4.8",
+    "expo-auth-session": "~6.2.1",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "^7.1.5",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
